--- a/redevable/src/main/resources/application.properties
+++ b/redevable/src/main/resources/application.properties
@@ -8,3 +8,19 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+# rabbitmq (redevable)
+#spring.rabbitmq.addresses = localhost:5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#spring:
+#  rabbitmq:
+#    host: localhost
+#    password: guest
+#    port: 15672
+#    username: guest
+#    exchange: user.exchange
+#    queue: user.queue
+#    routingkey: user.routingkey
