--- a/terrain/src/main/resources/application.properties
+++ b/terrain/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+# rabbitmq (terrain)
+#spring.rabbitmq.addresses = localhost:5672
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
